window.event should not be affected by nodes moving post-dispatch https://bugs.webkit.org/show_bug.cgi?id=218635

Reviewed by Geoffrey Garen.

LayoutTests/imported/w3c:

Rebaseline test now that it is fully passing.

* web-platform-tests/dom/events/event-global-extra.window-expected.txt:

Source/WebCore:

window.event should not be affected by nodes moving post-dispatch:
- https://dom.spec.whatwg.org/#concept-event-listener-invoke

In particular, window.event should not get set when the event target was inside
a shadow tree initially when dispatchEvent() got called, even if the event target
gets moved out of the shadow tree during the execution of the event listeners.

Previously, our code was checking if the node was in a shadow tree at the point
of calling each event listener, instead of doing that check very initially when
dispatchEvent() is called.

No new tests, rebaselined existing test.

* bindings/js/JSEventListener.cpp:
(WebCore::JSEventListener::handleEvent):
* dom/Event.cpp:
(WebCore::Event::setCurrentTarget):
(WebCore::Event::resetAfterDispatch):
* dom/Event.h:
(WebCore::Event::currentTargetIsInShadowTree const):
* dom/EventContext.cpp:
(WebCore::EventContext::handleLocalEvents const):
* dom/EventContext.h:
(WebCore::EventContext::isCurrentTargetInShadowTree const):
* dom/EventPath.cpp:
(WebCore::WindowEventContext::handleLocalEvents const):


Canonical link: https://commits.webkit.org/231300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269500 268f45cc-cd09-0410-ab3c-d52691b4dbfc