Source/WebCore/dom/Event.h
@@ -70,7 +70,8 @@ public:
     void setTarget(RefPtr<EventTarget>&&);
 
     EventTarget* currentTarget() const { return m_currentTarget.get(); }
-    void setCurrentTarget(EventTarget*);
+    void setCurrentTarget(EventTarget*, Optional<bool> isInShadowTree = WTF::nullopt);
+    bool currentTargetIsInShadowTree() const { return m_currentTargetIsInShadowTree; }
 
     unsigned short eventPhase() const { return m_eventPhase; }
     void setEventPhase(PhaseType phase) { m_eventPhase = phase; }
@@ -167,6 +168,7 @@ private:
     unsigned m_isDefaultEventHandlerIgnored : 1;
     unsigned m_isTrusted : 1;
     unsigned m_isExecutingPassiveEventListener : 1;
+    unsigned m_currentTargetIsInShadowTree : 1;
 
     unsigned m_eventPhase : 2;
 
