Source/WebCore/dom/EventContext.h
@@ -43,6 +43,7 @@ public:
 
     Node* node() const { return m_node.get(); }
     EventTarget* currentTarget() const { return m_currentTarget.get(); }
+    bool isCurrentTargetInShadowTree() const { return m_currentTargetIsInShadowTree; }
     EventTarget* target() const { return m_target.get(); }
     int closedShadowDepth() const { return m_closedShadowDepth; }
 
@@ -60,6 +61,7 @@ protected:
     RefPtr<EventTarget> m_currentTarget;
     RefPtr<EventTarget> m_target;
     int m_closedShadowDepth { 0 };
+    bool m_currentTargetIsInShadowTree { false };
 };
 
 class MouseOrFocusEventContext final : public EventContext {
